--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:hyman="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,57 +9,57 @@
         android:id="@+id/id_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:background="@drawable/tab_bg">
+        android:background="@drawable/tab_bg"
+        android:orientation="horizontal">
 
         <com.telchina.wx.ChangeColorIconWithText
             android:id="@+id/id_indicator_one"
             android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:padding="5dp"
+            hyman:c_color="#770000ff"
             hyman:c_icon="@mipmap/ic_menu_start_conversation"
-            hyman:c_color="#0000ff"
             hyman:c_text="@string/app_name"
-            hyman:c_text_size="12sp"
-            android:layout_height="fill_parent" />
+            hyman:c_text_size="12sp" />
 
         <com.telchina.wx.ChangeColorIconWithText
             android:id="@+id/id_indicator_two"
             android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:padding="5dp"
+            hyman:c_color="#77ff0000"
             hyman:c_icon="@mipmap/ic_menu_friendslist"
-            hyman:c_color="#ff0000"
             hyman:c_text="@string/tab_contact"
-            hyman:c_text_size="12sp"
-            android:layout_height="fill_parent" />
+            hyman:c_text_size="12sp" />
 
         <com.telchina.wx.ChangeColorIconWithText
             android:id="@+id/id_indicator_three"
             android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:padding="5dp"
+            hyman:c_color="#7700ff00"
             hyman:c_icon="@mipmap/ic_menu_emoticons"
-            hyman:c_color="#00ff00"
             hyman:c_text="@string/tab_found"
-            hyman:c_text_size="12sp"
-            android:layout_height="fill_parent" />
+            hyman:c_text_size="12sp" />
 
         <com.telchina.wx.ChangeColorIconWithText
             android:id="@+id/id_indicator_four"
             android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:padding="5dp"
+            hyman:c_color="#7700ffff"
             hyman:c_icon="@mipmap/ic_menu_allfriends"
-            hyman:c_color="#00ffff"
             hyman:c_text="@string/tab_me"
-            hyman:c_text_size="12sp"
-            android:layout_height="fill_parent" />
+            hyman:c_text_size="12sp" />
 
     </LinearLayout>
 
