--- a/app/src/main/res/drawable/tab_bg.xml
+++ b/app/src/main/res/drawable/tab_bg.xml
@@ -3,11 +3,8 @@
 
     <stroke
         android:width="1dp"
-        android:color="#eee000"
-        />
+        android:color="#eee000" />
 
-    <solid
-        android:color="#f7f7ff"
-        />
+    <solid android:color="#f7f7ff" />
 
 </shape>
