--- a/app/src/main/res/layout/news_content.xml
+++ b/app/src/main/res/layout/news_content.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/news_content_fragment"
-        android:name="com.telchina.wx.NewsContentFragment"
+        android:name="com.telchina.wx.news.NewsContentFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
