--- a/app/src/main/res/layout-sw600dp/news_title.xml
+++ b/app/src/main/res/layout-sw600dp/news_title.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/news_title_fragment"
-        android:name="com.telchina.wx.NewsTitleFragment"
+        android:name="com.telchina.wx.news.NewsTitleFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
@@ -18,7 +18,7 @@
 
         <fragment
             android:id="@+id/news_content_fragment"
-            android:name="com.telchina.wx.NewsContentFragment"
+            android:name="com.telchina.wx.news.NewsContentFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
