--- a/app/src/main/res/layout/news_content_fragment.xml
+++ b/app/src/main/res/layout/news_content_fragment.xml
@@ -30,7 +30,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:padding="15dp"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
